--- a/mid_project/index.html
+++ b/mid_project/index.html
@@ -62,6 +62,7 @@
     <script src="script/sketch.js"></script>
 </head>
 <body>
+    <!-- lets see the change! -->
 
 <header>
     <h1>Ken Zhang's IMA Coding Lab</h1>
