--- a/mid_project/index.html
+++ b/mid_project/index.html
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: #DDD5D5;
+            background-color: #fff;
             color: white;
             padding: 15px;
             text-align: center;
@@ -19,7 +19,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #fff;
         }
         nav a {
             color: white;
@@ -28,7 +28,7 @@
             text-align: center;
         }
         nav a:hover {
-            background-color: #ddd;
+            background-color: #fff;
             color: black;
         }
         main {
@@ -36,7 +36,7 @@
             text-align: center;
         }
         footer {
-            background-color: #333;
+            background-color: #fff;
             color: white;
             text-align: center;
             padding: 10px;
