--- a/mid_project/index.html
+++ b/mid_project/index.html
@@ -12,7 +12,7 @@
         }
         header {
             background-color: #fff;
-            color: white;
+            color: black;
             padding: 15px;
             text-align: center;
         }
@@ -22,7 +22,7 @@
             background-color: #fff;
         }
         nav a {
-            color: white;
+            color: black;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
@@ -37,7 +37,7 @@
         }
         footer {
             background-color: #fff;
-            color: white;
+            color: black;
             text-align: center;
             padding: 10px;
             position: fixed;
@@ -69,9 +69,9 @@
 </header>
 
 <nav>
-    <a href="#home">Midwork</a>
-    <a href="#about">Finalwork</a>
-    <a href="#contact">Firework</a>
+    <a href="#1">Midwork</a>
+    <a href="#2">Finalwork</a>
+    <a href="#3">Firework</a>
 </nav>
 
 <main>
